# ngage-display-converter

./: README.md
firmware/: LICENSE.md  README.md
firmware/assets/: display_buffer_rgb565.h  frame_buffer_rgb565.h  splash_mupf_rgb565.h  splash_stacksmashing_rgb565.h
firmware/src/: main.c  ngage.c  ngage.h
hardware/: BOM.md
software/: CMakeLists.txt
software/assets/: display_buffer_rgb565.h  frame_buffer_320x240_rgb565.h
software/src/: main.c  ngage.c  ngage.h
